qt/multimedia/gen_qmediaserviceproviderplugin.nim

import Qt5MultimediaWidgets_libs

{.push raises: [].}

from system/ansi_c import c_free

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config -cflags Qt5MultimediaWidgets")
{.compile("gen_qmediaserviceproviderplugin.cpp", cflags).}


type QMediaServiceProviderHintType* = cint
const
  QMediaServiceProviderHintNull* = 0
  QMediaServiceProviderHintContentType* = 1
  QMediaServiceProviderHintDevice* = 2
  QMediaServiceProviderHintSupportedFeatures* = 3
  QMediaServiceProviderHintCameraPosition* = 4



type QMediaServiceProviderHintFeature* = cint
const
  QMediaServiceProviderHintLowLatencyPlayback* = 1
  QMediaServiceProviderHintRecordingSupport* = 2
  QMediaServiceProviderHintStreamPlayback* = 4
  QMediaServiceProviderHintVideoSurface* = 8



import gen_qmediaserviceproviderplugin_types
export gen_qmediaserviceproviderplugin_types

import
  gen_qcamera,
  gen_qmediaservice,
  gen_qmultimedia,
  gen_qobject,
  gen_qobjectdefs
export
  gen_qcamera,
  gen_qmediaservice,
  gen_qmultimedia,
  gen_qobject,
  gen_qobjectdefs

type cQMediaServiceProviderHint*{.exportc: "QMediaServiceProviderHint", incompleteStruct.} = object
type cQMediaServiceProviderFactoryInterface*{.exportc: "QMediaServiceProviderFactoryInterface", incompleteStruct.} = object
type cQMediaServiceSupportedFormatsInterface*{.exportc: "QMediaServiceSupportedFormatsInterface", incompleteStruct.} = object
type cQMediaServiceSupportedDevicesInterface*{.exportc: "QMediaServiceSupportedDevicesInterface", incompleteStruct.} = object
type cQMediaServiceDefaultDeviceInterface*{.exportc: "QMediaServiceDefaultDeviceInterface", incompleteStruct.} = object
type cQMediaServiceCameraInfoInterface*{.exportc: "QMediaServiceCameraInfoInterface", incompleteStruct.} = object
type cQMediaServiceFeaturesInterface*{.exportc: "QMediaServiceFeaturesInterface", incompleteStruct.} = object
type cQMediaServiceProviderPlugin*{.exportc: "QMediaServiceProviderPlugin", incompleteStruct.} = object

proc fcQMediaServiceProviderHint_new(): ptr cQMediaServiceProviderHint {.importc: "QMediaServiceProviderHint_new".}
proc fcQMediaServiceProviderHint_new2(mimeType: struct_miqt_string, codecs: struct_miqt_array): ptr cQMediaServiceProviderHint {.importc: "QMediaServiceProviderHint_new2".}
proc fcQMediaServiceProviderHint_new3(device: struct_miqt_string): ptr cQMediaServiceProviderHint {.importc: "QMediaServiceProviderHint_new3".}
proc fcQMediaServiceProviderHint_new4(position: cint): ptr cQMediaServiceProviderHint {.importc: "QMediaServiceProviderHint_new4".}
proc fcQMediaServiceProviderHint_new5(features: cint): ptr cQMediaServiceProviderHint {.importc: "QMediaServiceProviderHint_new5".}
proc fcQMediaServiceProviderHint_new6(other: pointer): ptr cQMediaServiceProviderHint {.importc: "QMediaServiceProviderHint_new6".}
proc fcQMediaServiceProviderHint_operatorAssign(self: pointer, other: pointer): void {.importc: "QMediaServiceProviderHint_operatorAssign".}
proc fcQMediaServiceProviderHint_operatorEqual(self: pointer, other: pointer): bool {.importc: "QMediaServiceProviderHint_operatorEqual".}
proc fcQMediaServiceProviderHint_operatorNotEqual(self: pointer, other: pointer): bool {.importc: "QMediaServiceProviderHint_operatorNotEqual".}
proc fcQMediaServiceProviderHint_isNull(self: pointer, ): bool {.importc: "QMediaServiceProviderHint_isNull".}
proc fcQMediaServiceProviderHint_typeX(self: pointer, ): cint {.importc: "QMediaServiceProviderHint_type".}
proc fcQMediaServiceProviderHint_mimeType(self: pointer, ): struct_miqt_string {.importc: "QMediaServiceProviderHint_mimeType".}
proc fcQMediaServiceProviderHint_codecs(self: pointer, ): struct_miqt_array {.importc: "QMediaServiceProviderHint_codecs".}
proc fcQMediaServiceProviderHint_device(self: pointer, ): struct_miqt_string {.importc: "QMediaServiceProviderHint_device".}
proc fcQMediaServiceProviderHint_cameraPosition(self: pointer, ): cint {.importc: "QMediaServiceProviderHint_cameraPosition".}
proc fcQMediaServiceProviderHint_features(self: pointer, ): cint {.importc: "QMediaServiceProviderHint_features".}
proc fcQMediaServiceProviderHint_delete(self: pointer) {.importc: "QMediaServiceProviderHint_delete".}
proc fcQMediaServiceProviderFactoryInterface_create(self: pointer, key: struct_miqt_string): pointer {.importc: "QMediaServiceProviderFactoryInterface_create".}
proc fcQMediaServiceProviderFactoryInterface_release(self: pointer, service: pointer): void {.importc: "QMediaServiceProviderFactoryInterface_release".}
proc fcQMediaServiceProviderFactoryInterface_operatorAssign(self: pointer, param1: pointer): void {.importc: "QMediaServiceProviderFactoryInterface_operatorAssign".}
proc fcQMediaServiceProviderFactoryInterface_delete(self: pointer) {.importc: "QMediaServiceProviderFactoryInterface_delete".}
proc fcQMediaServiceSupportedFormatsInterface_hasSupport(self: pointer, mimeType: struct_miqt_string, codecs: struct_miqt_array): cint {.importc: "QMediaServiceSupportedFormatsInterface_hasSupport".}
proc fcQMediaServiceSupportedFormatsInterface_supportedMimeTypes(self: pointer, ): struct_miqt_array {.importc: "QMediaServiceSupportedFormatsInterface_supportedMimeTypes".}
proc fcQMediaServiceSupportedFormatsInterface_operatorAssign(self: pointer, param1: pointer): void {.importc: "QMediaServiceSupportedFormatsInterface_operatorAssign".}
proc fcQMediaServiceSupportedFormatsInterface_delete(self: pointer) {.importc: "QMediaServiceSupportedFormatsInterface_delete".}
proc fcQMediaServiceSupportedDevicesInterface_devices(self: pointer, service: struct_miqt_string): struct_miqt_array {.importc: "QMediaServiceSupportedDevicesInterface_devices".}
proc fcQMediaServiceSupportedDevicesInterface_deviceDescription(self: pointer, service: struct_miqt_string, device: struct_miqt_string): struct_miqt_string {.importc: "QMediaServiceSupportedDevicesInterface_deviceDescription".}
proc fcQMediaServiceSupportedDevicesInterface_operatorAssign(self: pointer, param1: pointer): void {.importc: "QMediaServiceSupportedDevicesInterface_operatorAssign".}
proc fcQMediaServiceSupportedDevicesInterface_delete(self: pointer) {.importc: "QMediaServiceSupportedDevicesInterface_delete".}
proc fcQMediaServiceDefaultDeviceInterface_defaultDevice(self: pointer, service: struct_miqt_string): struct_miqt_string {.importc: "QMediaServiceDefaultDeviceInterface_defaultDevice".}
proc fcQMediaServiceDefaultDeviceInterface_operatorAssign(self: pointer, param1: pointer): void {.importc: "QMediaServiceDefaultDeviceInterface_operatorAssign".}
proc fcQMediaServiceDefaultDeviceInterface_delete(self: pointer) {.importc: "QMediaServiceDefaultDeviceInterface_delete".}
proc fcQMediaServiceCameraInfoInterface_cameraPosition(self: pointer, device: struct_miqt_string): cint {.importc: "QMediaServiceCameraInfoInterface_cameraPosition".}
proc fcQMediaServiceCameraInfoInterface_cameraOrientation(self: pointer, device: struct_miqt_string): cint {.importc: "QMediaServiceCameraInfoInterface_cameraOrientation".}
proc fcQMediaServiceCameraInfoInterface_operatorAssign(self: pointer, param1: pointer): void {.importc: "QMediaServiceCameraInfoInterface_operatorAssign".}
proc fcQMediaServiceCameraInfoInterface_delete(self: pointer) {.importc: "QMediaServiceCameraInfoInterface_delete".}
proc fcQMediaServiceFeaturesInterface_supportedFeatures(self: pointer, service: struct_miqt_string): cint {.importc: "QMediaServiceFeaturesInterface_supportedFeatures".}
proc fcQMediaServiceFeaturesInterface_operatorAssign(self: pointer, param1: pointer): void {.importc: "QMediaServiceFeaturesInterface_operatorAssign".}
proc fcQMediaServiceFeaturesInterface_delete(self: pointer) {.importc: "QMediaServiceFeaturesInterface_delete".}
proc fcQMediaServiceProviderPlugin_metaObject(self: pointer, ): pointer {.importc: "QMediaServiceProviderPlugin_metaObject".}
proc fcQMediaServiceProviderPlugin_metacast(self: pointer, param1: cstring): pointer {.importc: "QMediaServiceProviderPlugin_metacast".}
proc fcQMediaServiceProviderPlugin_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QMediaServiceProviderPlugin_metacall".}
proc fcQMediaServiceProviderPlugin_tr(s: cstring): struct_miqt_string {.importc: "QMediaServiceProviderPlugin_tr".}
proc fcQMediaServiceProviderPlugin_trUtf8(s: cstring): struct_miqt_string {.importc: "QMediaServiceProviderPlugin_trUtf8".}
proc fcQMediaServiceProviderPlugin_create(self: pointer, key: struct_miqt_string): pointer {.importc: "QMediaServiceProviderPlugin_create".}
proc fcQMediaServiceProviderPlugin_release(self: pointer, service: pointer): void {.importc: "QMediaServiceProviderPlugin_release".}
proc fcQMediaServiceProviderPlugin_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QMediaServiceProviderPlugin_tr2".}
proc fcQMediaServiceProviderPlugin_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QMediaServiceProviderPlugin_tr3".}
proc fcQMediaServiceProviderPlugin_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QMediaServiceProviderPlugin_trUtf82".}
proc fcQMediaServiceProviderPlugin_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QMediaServiceProviderPlugin_trUtf83".}
proc fcQMediaServiceProviderPlugin_delete(self: pointer) {.importc: "QMediaServiceProviderPlugin_delete".}


func init*(T: type QMediaServiceProviderHint, h: ptr cQMediaServiceProviderHint): QMediaServiceProviderHint =
  T(h: h)
proc create*(T: type QMediaServiceProviderHint, ): QMediaServiceProviderHint =

  QMediaServiceProviderHint.init(fcQMediaServiceProviderHint_new())
proc create*(T: type QMediaServiceProviderHint, mimeType: string, codecs: seq[string]): QMediaServiceProviderHint =

  var codecs_CArray = newSeq[struct_miqt_string](len(codecs))
  for i in 0..<len(codecs):
    codecs_CArray[i] = struct_miqt_string(data: codecs[i], len: csize_t(len(codecs[i])))

  QMediaServiceProviderHint.init(fcQMediaServiceProviderHint_new2(struct_miqt_string(data: mimeType, len: csize_t(len(mimeType))), struct_miqt_array(len: csize_t(len(codecs)), data: if len(codecs) == 0: nil else: addr(codecs_CArray[0]))))
proc create*(T: type QMediaServiceProviderHint, device: seq[byte]): QMediaServiceProviderHint =

  QMediaServiceProviderHint.init(fcQMediaServiceProviderHint_new3(struct_miqt_string(data: cast[cstring](if len(device) == 0: nil else: unsafeAddr device[0]), len: csize_t(len(device)))))
proc create*(T: type QMediaServiceProviderHint, position: gen_qcamera.QCameraPosition): QMediaServiceProviderHint =

  QMediaServiceProviderHint.init(fcQMediaServiceProviderHint_new4(cint(position)))
proc create2*(T: type QMediaServiceProviderHint, features: QMediaServiceProviderHintFeature): QMediaServiceProviderHint =

  QMediaServiceProviderHint.init(fcQMediaServiceProviderHint_new5(cint(features)))
proc create*(T: type QMediaServiceProviderHint, other: QMediaServiceProviderHint): QMediaServiceProviderHint =

  QMediaServiceProviderHint.init(fcQMediaServiceProviderHint_new6(other.h))
proc operatorAssign*(self: QMediaServiceProviderHint, other: QMediaServiceProviderHint): void =

  fcQMediaServiceProviderHint_operatorAssign(self.h, other.h)

proc operatorEqual*(self: QMediaServiceProviderHint, other: QMediaServiceProviderHint): bool =

  fcQMediaServiceProviderHint_operatorEqual(self.h, other.h)

proc operatorNotEqual*(self: QMediaServiceProviderHint, other: QMediaServiceProviderHint): bool =
